fix horizontal scroll

--- a/src/components/LandingPage/style.css
+++ b/src/components/LandingPage/style.css
@@ -36,8 +36,8 @@
 }
 
 /* Prevents content from horizontally spreading too much when browser window is very wide */
-.panel * {
-    max-width: 1010px;
+.text-content {
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -47,7 +47,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: stretch;
+    margin: auto;
 }
 
 .cards > * {
